--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <canvas></canvas>
+  <canvas width="400" height="500"></canvas>
   <script src="script.js"></script>
 </body>
 </html>
